--- a/content/barrier-prioritization.qmd
+++ b/content/barrier-prioritization.qmd
@@ -1,91 +1,20 @@
-# Barrier Prioritization {-}
-
-```{python}
-#| echo: false
-#| warning: false
-
-import pandas as pd
-import numpy as np
-import warnings
-import requests
-import json
-import pandas
-
-def barrier_extent(barrier_type):
-
-    request = 'https://cabd-pro.cwf-fcf.org/bcfishpass/functions/postgisftw.wcrp_barrier_extent/items.json?watershed_group_code=BULK&barrier_type=' + barrier_type
-
-    response_api = requests.get(request)
-    parse = response_api.text
-    result = json.loads(parse)
-
-    blocked_km = result[0]['all_habitat_blocked_km']
-    blocked_pct = result[0]['extent_pct']
-
-    return blocked_km, blocked_pct
-
-def barrier_count(barrier_type):
-    request = 'https://cabd-pro.cwf-fcf.org/bcfishpass/functions/postgisftw.wcrp_barrier_count/items.json?watershed_group_code=BULK&barrier_type=' + barrier_type
-
-    response_api = requests.get(request)
-    parse = response_api.text
-    result = json.loads(parse)
-
-    n_passable = result[0]['n_passable']
-    n_barrier = result[0]['n_barrier']
-    n_potential = result[0]['n_potential']
-    n_unknown = result[0]['n_unknown']
-
-    sum_bar = (n_passable, n_barrier, n_potential, n_unknown)
-
-    return n_passable, n_barrier, n_potential, n_unknown, sum(sum_bar)
-
-def barrier_severity(barrier_type):
-
-    request = 'https://cabd-pro.cwf-fcf.org/bcfishpass/functions/postgisftw.wcrp_barrier_severity/items.json?watershed_group_code=BULK&barrier_type=' + barrier_type
-
-    response_api = requests.get(request)
-    parse = response_api.text
-    result = json.loads(parse)
-
-    n_assessed_barrier = result[0]['n_assessed_barrier']
-    n_assess_total = result[0]['n_assess_total']
-    pct_assessed_barrier = result[0]['pct_assessed_barrier']
-
-    return n_assessed_barrier, n_assess_total, pct_assessed_barrier
-
-def watershed_connectivity(habitat_type):
-
-    request = 'https://cabd-pro.cwf-fcf.org/bcfishpass/functions/postgisftw.wcrp_habitat_connectivity_status/items.json?watershed_group_code=BULK&barrier_type=' + habitat_type
-
-    response_api = requests.get(request)
-    parse = response_api.text
-    result = json.loads(parse)
-
-    connect_stat = result[0]['connectivity_status']
-    all_habitat = result[0]['all_habitat']
-    all_habitat_acc = result[0]['all_habitat_accessible']
-
-    return str(round(connect_stat)), all_habitat, all_habitat_acc
-
-warnings.filterwarnings('ignore')
-
-total = watershed_connectivity("ALL")[1] #total km in BULK
-access = watershed_connectivity("ALL")[2]
-gain = round((total*0.96)-access,2)
+```{python echo=FALSE}
+import python.api_calls as api
 ```
-
 ```{r}
 #| echo: false
 #| warning: false
 
 library(reticulate)
-
-gain <- py$gain
+api <- import("python.api_calls")
+gain <- api$gain
 
 ```
 
-## Appendix C: Bulkley River Watershed Barrier Prioritization Summary {-}
+# Barrier Prioritization {-}
+
+
+## Bulkley River Watershed Barrier Prioritization Summary {-}
 
 The primary conservation outcome of the WCRP is the remediation of barriers to connectivity in the Bulkley River watershed. To achieve Goals 1 and 2 in this plan, it is necessary to prioritize and identify a suite of barriers that, if remediated, will provide access to a minimum of 86 km of spawning habitat and 211 km of rearing habitat (@tbl-table16):
 
@@ -103,14 +32,14 @@ import warnings
 
 warnings.filterwarnings('ignore')
 
-total = watershed_connectivity("ALL")[1] #total km in BULK
-access = watershed_connectivity("ALL")[2]
+total = api.watershed_connectivity("ALL")[1] #total km in BULK
+access = api.watershed_connectivity("ALL")[2]
 gain = round((total*0.95)-access,2)
 
 df = pd.DataFrame({"Habitat Type":["Spawning","Rearing"],
                    "Currently accessible (km)":[str(access),"2"],
                    "Total": [str(total),"2"],
-                   "Current Connectivity Status":[str(watershed_connectivity("ALL")[0])+"%","2"],
+                   "Current Connectivity Status":[str(api.watershed_connectivity("ALL")[0])+"%","2"],
                    "Goal": ["95%","2"],
                    "Gain required (km)": [str(gain),"2"]
                    })
