--- a/content/connectivity-status.qmd
+++ b/content/connectivity-status.qmd
@@ -1,3 +1,14 @@
+```{python echo=FALSE}
+#| echo: false
+import warnings
+import pandas as pd
+import numpy as np
+import python.api_calls as api
+import matplotlib as mpl
+
+warnings.filterwarnings('ignore')
+```
+
 # Connectivity Status Assessment and Goals {-}
 
 ## Key Ecological Attributes and Current Connectivity Status {-}
@@ -6,81 +17,6 @@ The planning team devised two Key Ecological Attributes (KEAs) and associated in
 
 The current connectivity status assessment relies on GIS analyses to map known and modelled barriers to fish passage, identify stream reaches that have potential spawning and rearing habitat, estimate the proportion of habitat that is currently accessible to target species, and prioritize barriers for field assessment that would provide the greatest gains in connectivity. To support a flexible prioritization framework to identify priority barriers in the watershed, two assumptions are made: 1) any modelled (i.e., passability status is unknown) or partial barriers are treated as complete barriers to passage and 2) the habitat modelling is binary, it does not assign any habitat quality values. As such, the current connectivity status will be refined over time as more data on habitat and barriers are collected. For more detail on how the connectivity status assessments were conducted, see Appendix B.
 
-```{python}
-#| echo: false
-#| warning: false
-
-import requests
-import json
-import pandas
-
-def barrier_extent(barrier_type):
-
-    request = 'https://cabd-pro.cwf-fcf.org/bcfishpass/functions/postgisftw.wcrp_barrier_extent/items.json?watershed_group_code=BULK&barrier_type=' + barrier_type
-
-    response_api = requests.get(request)
-    parse = response_api.text
-    result = json.loads(parse)
-
-    blocked_km = result[0]['all_habitat_blocked_km']
-    blocked_pct = result[0]['extent_pct']
-
-    return blocked_km, blocked_pct
-
-def barrier_count(barrier_type):
-    request = 'https://cabd-pro.cwf-fcf.org/bcfishpass/functions/postgisftw.wcrp_barrier_count/items.json?watershed_group_code=BULK&barrier_type=' + barrier_type
-
-    response_api = requests.get(request)
-    parse = response_api.text
-    result = json.loads(parse)
-
-    n_passable = result[0]['n_passable']
-    n_barrier = result[0]['n_barrier']
-    n_potential = result[0]['n_potential']
-    n_unknown = result[0]['n_unknown']
-
-    sum_bar = (n_passable, n_barrier, n_potential, n_unknown)
-
-    return n_passable, n_barrier, n_potential, n_unknown, sum(sum_bar)
-
-def barrier_severity(barrier_type):
-
-    request = 'https://cabd-pro.cwf-fcf.org/bcfishpass/functions/postgisftw.wcrp_barrier_severity/items.json?watershed_group_code=BULK&barrier_type=' + barrier_type
-
-    response_api = requests.get(request)
-    parse = response_api.text
-    result = json.loads(parse)
-
-    n_assessed_barrier = result[0]['n_assessed_barrier']
-    n_assess_total = result[0]['n_assess_total']
-    pct_assessed_barrier = result[0]['pct_assessed_barrier']
-
-    return n_assessed_barrier, n_assess_total, pct_assessed_barrier
-
-def watershed_connectivity(habitat_type):
-
-    request = 'https://cabd-pro.cwf-fcf.org/bcfishpass/functions/postgisftw.wcrp_habitat_connectivity_status/items.json?watershed_group_code=BULK&barrier_type=' + habitat_type
-
-    response_api = requests.get(request)
-    parse = response_api.text
-    result = json.loads(parse)
-
-    connect_stat = result[0]['connectivity_status']
-
-    return str(round(connect_stat))
-
-num_dam = barrier_severity('DAM')[1]
-km_dam = barrier_extent('DAM')[0]
-pct_dam = barrier_extent('DAM')[1]
-resource_km = barrier_extent('ROAD, RESOURCE/OTHER')[0]
-resource_pct = round(barrier_extent('ROAD, RESOURCE/OTHER')[1])
-demo_km = barrier_extent('ROAD, DEMOGRAPHIC')[0]
-demo_pct = round(barrier_extent('ROAD, DEMOGRAPHIC')[1])
-resource_sev = round(barrier_severity('ROAD, RESOURCE/OTHER')[2])
-demo_sev = round(barrier_severity('ROAD, DEMOGRAPHIC')[2])
-sum_road = barrier_severity('ROAD, RESOURCE/OTHER')[1] + barrier_severity('ROAD, DEMOGRAPHIC')[1]
-
-```
 
 ```{python echo=FALSE}
 #| label: tbl-connectivity
@@ -100,7 +36,7 @@ df = pd.DataFrame({"Target Species":["Andromous Salmon"," "],
                    "Indicator":["% of total spawning habitat","Current Status:"],
                    "Poor":["<50%"," "],
                    "Fair":["51-75%"," "],
-                   "Good":["76-90%", "88"],
+                   "Good":["76-90%", api.watershed_connectivity("SPAWNING")[0]],
                    "Very Good":[">90%"," "]  # watershed_connectivity("ALL")]
                    })
 
@@ -147,7 +83,7 @@ df = pd.DataFrame({"Target Species":["Andromous Salmon",""],
                    "KEA":["Available Rearing Habitat",""],
                    "Indicator":["% of total rearing habitat","Current Status:"],
                    "Poor":["<50%"," "],
-                   "Fair":["51-75%", "70"],
+                   "Fair":["51-75%", api.watershed_connectivity("REARING")[0]],
                    "Good":["76–90%"," "],
                    "Very Good":[">90%"," "]
                    })
@@ -198,8 +134,8 @@ import pandas as pd
 import numpy as np
 
 df = pd.DataFrame({"Goal #": [1,2],
-                   "Goal": ["By 2031, the percent (%) of total linear spawning habitat accessible to anadromous salmonids will increase from 88% to 95% within the Bulkley River watershed (i.e., reconnect at least 86 km of spawning habitat).",
-                            "By 2031, the percent (%) of total linear rearing habitat accessible to anadromous salmonids will increase from 70% to 80% within the Bulkley River watershed (i.e., reconnect at least 211 km of rearing habitat). "]
+                   "Goal": ["By 2031, the percent (%) of total linear spawning habitat accessible to anadromous salmonids will increase from "+ str(api.watershed_connectivity("SPAWNING")[0]) +"% to 95% within the Bulkley River watershed (i.e., reconnect at least "+str(round(api.gain_spawn))+" km of spawning habitat).",
+                            "By 2031, the percent (%) of total linear rearing habitat accessible to anadromous salmonids will increase from "+str(api.watershed_connectivity("REARING")[0])+"% to 80% within the Bulkley River watershed (i.e., reconnect at least "+str(round(api.gain_rear))+" km of rearing habitat). "]
                     })
 
 data = df.style.hide().set_properties(**{'text-align': 'left'})
@@ -213,26 +149,5 @@ data.set_table_styles(
 ```
 
 
-
-```{r echo=FALSE}
-#| echo: false
-#| include: true
-#| warning: false
-
-library(reticulate)
-
-
-num_dam <- py$num_dam
-km_dam <- py$km_dam
-pct_dam <- py$pct_dam
-resource_km <- py$resource_km
-resource_pct <- py$resource_pct
-demo_km <- py$demo_km
-demo_pct <- py$demo_pct
-resource_sev <- py$resource_sev
-demo_sev <- py$demo_sev
-sum_road <- py$sum_road
-
-```
 
 
