Online Wcrp references update

--- a/references.bib
+++ b/references.bib
@@ -142,6 +142,13 @@
   publisher = "UBC"
 }
 
+@book{Hoopes1972,
+  title  = "Selection of Spawning Sites by Sockeye Salmon in Small Streams",
+  author = "Hoopes, D Y",
+  year   =  1972,
+  publisher = "Fishery Bulletin"
+}
+
 @book{DFO1991-tl,
   title  = "Fish habitat inventory and information program - stream summary information.",
   author = "DFO",
@@ -366,7 +373,7 @@
   number    =  6,
   pages     = "1654--1669",
   month     =  nov,
-  year      =  2003
+  year      =  2006
 }
 
 @article{Schindler2003,
